--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}PromptToVideo{% endblock %}</title>
     {% block meta %}{% endblock %}
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css', v='1.1') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/dark-mode.css') }}">
     <script>
         tailwind.config = {
             darkMode: 'class',
